# irdin

./: .gitignore  CLAUDE.md  export_db.sh  import_db.sh  import_from_phoenix.sh  manage.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  PalestraDetail.css  PalestraDetail.jsx  Search.jsx  ThemeToggle.jsx  main.jsx  textUtils.jsx
irdin/: asgi.py  settings.py  urls.py  wsgi.py
palestras/: admin.py  apps.py  audio_download.py  db_functions.py  models.py  views.py
palestras/management/commands/: download_audios.py  export_transcriptions.py  extract_concepts.py  fetch_author_photos.py  import_transcriptions.py  scrape_products.py  scrape_urls.py  stats.py  transcribe.py  verify_audios.py  verify_transcriptions.py
palestras/migrations/: 0001_initial.py  0002_audiotrack_transcription_timecoded.py  0003_concept_audiotrack_concepts.py  0004_remove_audiotrack_concepts_delete_concept_and_more.py  0005_author_photo.py  0006_author_wikipedia_search.py  0007_remove_audiotrack_downloaded.py  0008_alter_audiotrack_local_path.py  0009_palestra_language.py
scripts/: start  stop
